--- a/steamdata.ipynb.html
+++ b/steamdata.ipynb.html
@@ -231,14 +231,17 @@ info() выводит информацию в следующем формате:
 Тип данных каждого столбца 
 Общее количество столбцов 
 Количество использованной памяти 
+Если посмотреть на данные, то можно увидеть количество непустых значений, большинство из всего датасета непустые. Тип каждого столбца это object, всего столбцов 15, а оперативной памяти используется почти 5 Мб. 
+Можно сделать вывод, что датасет содержит достаточно много ненулевых значений. 
 </span><span class="s0">#%% 
 </span><span class="s1">steam</span><span class="s3">.</span><span class="s1">describe</span><span class="s3">()</span>
 <span class="s0">#%% md 
 </span><span class="s1">Анализ с помощью функций describe 
-count: Количество непустых (не-NaN) значений в столбце.  
-unique: количество уникальных значений 
-top:первое значение в датасете 
-freq: частота использования 
+count в нашем датасете показывает количество непустых значений. Почти все значения значения непустые. 
+unique в нашем датасете показывает значение уникальных значений. Количество уникальных значений гораздо меньше, чем количество всех значений и непустых значений. 
+top показывает наиболее часто встречающееся значение. Например, в типах, это значение app, а в отзывах это No reviews. 
+freq показывает, сколько раз встречается наиболее частое значение.  
+Можно сделать вывод, что в типах самое популярное это app, так как она встречается 38021, чаще всего у игры нет отзывов, так как No reviews встречается 38127 в недавних отзывах и 12363 во всех отзывах. Самый часто попадающийся разработчик это Ubisoft - San Francisco, так как он встречается 1041 раз. Самый часто попадающийся издатель это Degica, Degica, так как он встречается 469 раз. Самая популярная игровая деталь это одиночная игра (встречается 3547 раз), самый популярный язык, на котором доступна игра - английский (встречается 19085 раз). В большенстве игр датасета нет достижений (встречается 28639 раз), самый популярный жанр - Action (встречается 2386 раз), у большинства игр нет игрового описания (встречается 2913 раз) и у большинства игр цена не указана. 
  
 </span><span class="s0">#%% 
 </span><span class="s1">row_data </span><span class="s3">= </span><span class="s1">steam</span><span class="s3">.</span><span class="s1">loc</span><span class="s3">[</span><span class="s5">0</span><span class="s3">]</span>
